2008-11-15  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/sidebar.pl: Refactored. This is a complete rewrite
	removing all previous module-specific hacks. However, as it is a
	rewrite, it may still have issues. (Fortunately, time is the mother
	of invention and bug fixes.)
	* modules/toc.pl: Refactored. This is a complete rewrite
	removing all previous module-specific hacks. As with "sidebar.pl",
	it may still have issues. That said -- I'm relatively proud of it,
	and confident that it (should) stand up under rigorous scrutinies,
	utilization, and brutalization.
	* modules/forms.pl (FormsRule): Slightly revised, so as to comply
	with the "sidebar.pl" refactoring.

2008-11-15  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* wiki.pl (@MyAfterApplyRules): New global list. This is a list of
	subroutine references, much like @MyRules. Unlike @MyRules, whose
	subroutines are called by ApplyRules() while iterating through wiki
	page markup, @MyAfterApplyRules subroutines are called by
	PrintWikiToHTML(), iteratively, after all calls to ApplyRules().
	This may not sound like much -- certainly, no deep invention.
	Actually, however, it permits post-processing of all emitted HTML.
	This, in turn, allows us to reimplement the Table of Contents
	module ("toc.pl"), so as to remove the hacks upon which that
	module formerly depended. This is a good thing. Perhaps, even a
	great thing! As Alex can attest, "toc.pl" (and its retinue of
	oddball hacks) has given Oddmuse some dire trouble, over time.
	That's all past now...thanks be to the Nordic Gods.
	(@MyBeforeApplyRules): New global list. This is a list of
	subroutine references, much like @MyRules. Like @MyAfterApplyRules,
	above, @MyBeforeApplyRules subroutines are not called by
	ApplyRules() while iterating through wiki page markup but rather by
	PrintWikiToHTML(), iteratively, before all calls to ApplyRules().
	This, also, may not sound like much. However, it permits pre-